[gd_scene load_steps=8 format=3 uid="uid://b6lx6v7vb1xxq"]

[ext_resource type="Script" uid="uid://dh5donp8itt41" path="res://3D/UI.gd" id="1_qui0h"]
[ext_resource type="Texture2D" uid="uid://d1ly4yx7j74vw" path="res://boid_resources/black square.png" id="2_vrfts"]
[ext_resource type="Script" uid="uid://di1rtmv0qort2" path="res://3D/slider_menu.gd" id="3_0mc3e"]
[ext_resource type="Script" uid="uid://omimn1bep26k" path="res://3D/slider_menu_part.gd" id="4_vrfts"]
[ext_resource type="Script" uid="uid://b5g3taiwrhmc1" path="res://value_label.gd" id="5_vrfts"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0mc3e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vrfts"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_qui0h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 12.0
offset_top = 15.0
offset_right = 512.0
offset_bottom = 300.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
size_flags_horizontal = 4

[node name="BoidDataTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_vrfts")
expand_mode = 3
stretch_mode = 5

[node name="BoidVeloTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_vrfts")
expand_mode = 3
stretch_mode = 5

[node name="SliderMenu" type="PanelContainer" parent="VBoxContainer" node_paths=PackedStringArray("ui")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
script = ExtResource("3_0mc3e")
ui = NodePath("../..")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SliderMenu"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="SliderMenuContainer" type="VBoxContainer" parent="VBoxContainer/SliderMenu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SliderMenuPart" type="HBoxContainer" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer"]
layout_mode = 2
theme_override_constants/separation = 16
script = ExtResource("4_vrfts")

[node name="property" type="Label" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer/SliderMenuPart"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "num_boids"

[node name="NumBoids" type="LineEdit" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer/SliderMenuPart"]
custom_minimum_size = Vector2(240, 25)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_0mc3e")
text = "10_000"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="SliderMenuPart2" type="HBoxContainer" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer"]
layout_mode = 2
theme_override_constants/separation = 16
script = ExtResource("4_vrfts")

[node name="property" type="Label" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer/SliderMenuPart2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "world_radius"

[node name="WorldRadius" type="HSlider" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer/SliderMenuPart2"]
custom_minimum_size = Vector2(175, 25)
layout_mode = 2
size_flags_vertical = 4
min_value = 5.0
max_value = 80.0
value = 10.0

[node name="value_label" type="Label" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer/SliderMenuPart2"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "0.0"
script = ExtResource("5_vrfts")

[node name="SliderMenuPart3" type="HBoxContainer" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer"]
layout_mode = 2
theme_override_constants/separation = 16
script = ExtResource("4_vrfts")

[node name="property" type="Label" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer/SliderMenuPart3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "simulate_gpu"

[node name="SimulateGPU" type="CheckButton" parent="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer/SliderMenuPart3"]
custom_minimum_size = Vector2(143.35, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_vrfts")

[node name="DebugLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -368.0
offset_top = 31.0
offset_right = -65.0
offset_bottom = 127.0
theme_override_font_sizes/font_size = 18
text = "debug lister:"
autowrap_mode = 1

[connection signal="value_changed" from="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer/SliderMenuPart2/WorldRadius" to="VBoxContainer/SliderMenu/MarginContainer/SliderMenuContainer/SliderMenuPart2/value_label" method="_on_world_radius_value_changed"]
